cfn not rendered false from list(isOrdered)  all-rooms.jsp